@@ -1,5 +1,5 @@
 /* Extended Module Player
- * Copyright (C) 1996-2024 Claudio Matsuoka and Hipolito Carraro Jr
+ * Copyright (C) 1996-2025 Claudio Matsuoka and Hipolito Carraro Jr
  *
  * Permission is hereby granted, free of charge, to any person obtaining a
  * copy of this software and associated documentation files (the "Software"),
@@ -790,13 +790,11 @@ static int read_event_st3(struct context_data *ctx, struct xmp_event *e, int chn
 	struct xmp_subinstrument *sub;
 	int not_same_ins;
 	int is_toneporta;
-	int use_ins_vol;
 
 	xc->flags = 0;
 	note = -1;
 	not_same_ins = 0;
 	is_toneporta = 0;
-	use_ins_vol = 0;
 
 	if (IS_TONEPORTA(e->fxt) || IS_TONEPORTA(e->f2t)) {
 		is_toneporta = 1;
@@ -811,34 +809,28 @@ static int read_event_st3(struct context_data *ctx, struct xmp_event *e, int chn
 	if (e->ins) {
 		int ins = e->ins - 1;
 		SET(NEW_INS);
-		use_ins_vol = 1;
 		xc->fadeout = 0x10000;
 		xc->per_flags = 0;
 		xc->offset.val = 0;
 		RESET_NOTE(NOTE_RELEASE|NOTE_FADEOUT);
 
 		if (IS_VALID_INSTRUMENT(ins)) {
-			/* valid ins */
 			if (xc->ins != ins) {
 				not_same_ins = 1;
 				if (!is_toneporta) {
 					xc->ins = ins;
 					xc->ins_fade = mod->xxi[ins].rls;
-				} else {
-					/* Get new instrument volume */
-					sub = get_subinstrument(ctx, ins, e->note - 1);
-					if (sub != NULL) {
-						xc->volume = sub->vol;
-						use_ins_vol = 0;
-					}
 				}
 			}
-		} else {
-			/* invalid ins */
 
+			/* Get new instrument volume */
+			sub = get_subinstrument(ctx, ins, e->note - 1);
+			if (sub != NULL && e->note != XMP_KEY_OFF) {
+				xc->volume = sub->vol;
+			}
+		} else {
 			/* Ignore invalid instruments */
 			xc->flags = 0;
-			use_ins_vol = 0;
 		}
 	}
 
@@ -849,7 +841,6 @@ static int read_event_st3(struct context_data *ctx, struct xmp_event *e, int chn
 
 		if (e->note == XMP_KEY_OFF) {
 			SET_NOTE(NOTE_RELEASE);
-			use_ins_vol = 0;
 		} else if (is_toneporta) {
 			/* Always retrig in tone portamento: Fix portamento in
 			 * 7spirits.s3m, mod.Biomechanoid
@@ -880,11 +871,12 @@ static int read_event_st3(struct context_data *ctx, struct xmp_event *e, int chn
 				}
 			} else {
 				xc->flags = 0;
-				use_ins_vol = 0;
 			}
 		}
 	}
 
+	/* sub is now the currently playing subinstrument, which may not be
+	 * related to e->ins if there is active toneporta! */
 	sub = get_subinstrument(ctx, xc->ins, xc->key);
 
 	set_effect_defaults(ctx, note, sub, xc, is_toneporta);
@@ -910,10 +902,6 @@ static int read_event_st3(struct context_data *ctx, struct xmp_event *e, int chn
 	if (note >= 0) {
 		xc->note = note;
 		libxmp_virt_voicepos(ctx, chn, xc->offset.val);
-	}
-
-	if (use_ins_vol && !TEST(NEW_VOL)) {
-		xc->volume = sub->vol;
 	}
 
 	if (HAS_QUIRK(QUIRK_ST3BUGS) && TEST(NEW_VOL)) {
