@@ -22,7 +22,8 @@ Stable versions
 	- Correct default of sample default panning values to -1 (no default
 	  panning) for most module formats.
 	- Fix Galaxy Music System 4.0 sample default panning.
-	- Simplify read_event_mod sample default volume handling.
+	- Simplify read_event_mod, read_event_st3 sample default volume
+	  handling.
 	Changes by Alice Rowan and ds-sloth:
 	- Minor Impulse Tracker loader performance improvements.
 
